test/corpus/fail/M0070.mo
=========
M0070.mo
=========

true.foo

---

(source_file
  (exp_dec
    (dot_exp_object
      (lit_exp
        (bool_literal))
      (identifier))))
